# todo-api

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: app.py  security.py  settings.py
app/endpoints/: auth.py  todos.py  users.py
app/models/: todos.py  users.py
app/schemas/: todos.py  users.py
migrations/: env.py
migrations/versions/: cc957abf4fe1_create_todos_table.py  d90f61dd62ca_create_todos_table.py  e7841bb43809_adds_users_and_todos_tables.py  f54207ba47e7_create_users_and_todos_tables.py  f5d70186c173_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_todo.py  test_users.py
